--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,27 +4,27 @@
   "description": "Expo Promotion l'Egalité Homme-Femme",
   "icons": [
     {
-      "src": "./src/Assets/IMG/Favicon/favicon-16x16.png",
+      "src": "/IMG/Favicon/favicon-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "./src/Assets/IMG/Favicon/favicon-32x32.png",
+      "src": "/IMG/Favicon/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "./src/Assets/IMG/Favicon/favicon.ico",
+      "src": "/IMG/Favicon/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "./src/Assets/IMG/Favicon/android-chrome-192x192.png",
+      "src": "/IMG/Favicon/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./src/Assets/IMG/Favicon/android-chrome-512x512.png",
+      "src": "/IMG/Favicon/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
