Alpha-5 (Podium + fixes)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,8 @@
     {
       "src": "/IMG/Favicon/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/IMG/Favicon/android-chrome-512x512.png",
